--- a/live-site/index.html
+++ b/live-site/index.html
@@ -54,10 +54,10 @@
                 <div class="col-sm-6">
                     <div class="well well-sm">
                         <div class="form-group">
-                            <!-- <div class="btn-group" role="group" aria-label="Property Type">
+                            <div class="btn-group" role="group" aria-label="Property Type">
                                 <button type="button" class="btn btn-info active" id="residential">Residential</button>
                                 <button type="button" class="btn btn-info" id="commercial">Commercial</button>
-                            </div> -->
+                            </div>
 
                         </div>
                         <div class="form-group" style="margin-bottom: 0;">
@@ -74,5 +74,5 @@
     <div class="container">
     </div>
 
-    <script src="/app.min.js"></script>
+    <script src="app.min.js"></script>
 </body>
