--- a/new-version/index.html
+++ b/new-version/index.html
@@ -62,11 +62,6 @@
                 <div class="col-sm-6">
                     <div class="well well-sm">
                         <div class="btn-group">
-                            <div class="btn-group" role="group" aria-label="Property Type">
-
-                                <button type="button" class="btn btn-info" id="residential">Residential</button>
-                                <button type="button" class="btn btn-info" id="commercial">Commercial</button>
-                            </div>
 
                         </div>
                         <div class="form-group" style="margin-bottom: 0;">
@@ -83,5 +78,7 @@
         <div class="container">
         </div>
 
+        <!-- Adds jQuery to project -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="app.min.js"></script>
 </body>
